# via-ros-2

./: .gitignore  .gitmodules  README.md  VIA_CAR.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build.sh  cleanup_build.sh  open_image_view.sh  restart_ros2_deamon.sh  sample_camera.sh
src/api/thirdparties/: README.md
src/common/: CMakeLists.txt  README.md  package.xml
src/common/msg/: TwoInts.msg
src/drivers/: README.md
src/drivers/generic_camera_driver/: CMakeLists.txt  package.xml
src/drivers/generic_camera_driver/include/generic_camera_driver/: generic_camera_driver.hpp
src/drivers/generic_camera_driver/src/: generic_camera_driver.cpp
src/drivers/generic_camera_nodes/: CMakeLists.txt  package.xml
src/drivers/generic_camera_nodes/config/: params.yaml
src/drivers/generic_camera_nodes/launch/: camera_node.launch.py
src/drivers/generic_camera_nodes/src/: generic_camera_node.cpp
src/drivers/via_camera_nodes/config/: params.yaml
src/drivers/via_camera_nodes/launch/: camera_node.launch.py
src/examples/via_listener_nodes/: CMakeLists.txt  package.xml
src/examples/via_talker_nodes/: CMakeLists.txt  package.xml
src/nodes/examples/: README.md
src/via_api/: README.md
src/via_api/drivers/via_simulation_bridge/: CMakeLists.txt  package.xml
src/via_api/drivers/via_simulation_bridge/include/via_simulation_bridge/: via_simulation_bridge.hpp
src/via_api/drivers/via_simulation_bridge/src/: base64.cpp  via_simulation_bridge.cpp
src/via_api/intelligence/: README.md
src/via_api/perception/lane_line_detector_simple/: CMakeLists.txt  package.xml
src/via_api/perception/lane_line_detector_simple/include/lane_line_detector_simple/: lane_line_detector_simple.hpp
src/via_api/perception/lane_line_detector_simple/src/: lane_line_detector_simple.cpp
src/via_api/perception/traffic_sign_detector_simple/: CMakeLists.txt  package.xml
src/via_api/perception/traffic_sign_detector_simple/include/traffic_sign_detector_simple/: traffic_sign_detector_simple.hpp
src/via_api/perception/traffic_sign_detector_simple/models/: classes.txt
src/via_api/perception/traffic_sign_detector_simple/src/: traffic_sign_detector_simple.cpp
src/via_api/perception/traffic_sign_detector_yolox/: CMakeLists.txt  package.xml
src/via_api/perception/traffic_sign_detector_yolox/include/built_ncnn_headers/: platform.h
src/via_api/perception/traffic_sign_detector_yolox/include/traffic_sign_detector_yolox/: traffic_sign_detector_yolox.hpp  utils.hpp
src/via_api/perception/traffic_sign_detector_yolox/src/: traffic_sign_detector_yolox.cpp  utils.cpp
src/via_api/thirdparties/simple_websocket_server/: .gitlab-ci.yml  CMakeLists.txt  CMakeLists_origin.txt  package.xml
src/via_api/thirdparties/simple_websocket_server/include/simple_websocket_server/: client_ws.hpp  client_wss.hpp  server_ws.hpp  server_wss.hpp
src/via_api/thirdparties/simple_websocket_server/tests/: parse_test.cpp
src/via_common/: README.md
src/via_converters/: CMakeLists.txt  README.md  package.xml
src/via_converters/src/: image_converter.cpp
src/via_nodes/: README.md
src/via_nodes/drivers/generic_camera_driver_node/: CMakeLists.txt  package.xml
src/via_nodes/drivers/generic_camera_driver_node/config/: camera.yaml
src/via_nodes/drivers/generic_camera_driver_node/launch/: camera_node.launch.py
src/via_nodes/drivers/generic_camera_driver_node/src/: generic_camera_node.cpp
src/via_nodes/drivers/generic_camera_node/: CMakeLists.txt  package.xml
src/via_nodes/drivers/generic_camera_node/config/: params.yaml
src/via_nodes/drivers/generic_camera_node/launch/: camera_node.launch.py
src/via_nodes/drivers/generic_camera_node/src/: generic_camera_node.cpp
src/via_nodes/drivers/via_simulation_bridge_node/: CMakeLists.txt  package.xml
src/via_nodes/drivers/via_simulation_bridge_node/config/: params.yaml
src/via_nodes/drivers/via_simulation_bridge_node/include/via_simulation_bridge_node/: via_simulation_bridge_node.hpp
src/via_nodes/drivers/via_simulation_bridge_node/launch/: simulation_bridge_node.launch.py
src/via_nodes/drivers/via_simulation_bridge_node/src/: via_simulation_bridge_node.cpp
src/via_nodes/examples/via_listener_nodes/: CMakeLists.txt  package.xml
src/via_nodes/examples/via_listener_nodes/config/: params.yaml
src/via_nodes/examples/via_listener_nodes/include/via_listener_nodes/: via_listener_2ints_node.hpp  via_listener_node.hpp
src/via_nodes/examples/via_listener_nodes/src/: via_listener_2ints_node.cpp  via_listener_node.cpp
src/via_nodes/examples/via_talker_nodes/: CMakeLists.txt  package.xml
src/via_nodes/examples/via_talker_nodes/include/via_talker_nodes/: via_talker_2ints_node.hpp  via_talker_node.hpp
src/via_nodes/examples/via_talker_nodes/src/: via_talker_2ints_node.cpp
src/via_nodes/perception/lane_line_perception_node/: CMakeLists.txt  package.xml
src/via_nodes/perception/lane_line_perception_node/include/lane_line_perception_node/: lane_line_perception_node.hpp
src/via_nodes/perception/lane_line_perception_node/src/: lane_line_perception_node.cpp
src/via_nodes/perception/traffic_sign_detection_node/: CMakeLists.txt  package.xml
src/via_nodes/perception/traffic_sign_detection_node/include/traffic_sign_detection_node/: traffic_sign_detection_node.hpp
src/via_nodes/perception/traffic_sign_detection_node/src/: traffic_sign_detection_node.cpp
src/via_sdk/via_bringup/: CMakeLists.txt  package.xml
src/via_sdk/via_bringup/launch/: via_car_simulation.py
src/via_sdk/via_common/: CMakeLists.txt  package.xml
src/via_sdk/via_common/include/via_common/: node_handler.hpp  timer.hpp  types.h
src/via_sdk/via_common/include/via_common/geometry/: box2d.h  detection2d.h
src/via_sdk/via_common/src/: node_handler.cpp
src/via_sdk/via_converters/: CMakeLists.txt  README.md  package.xml
src/via_sdk/via_converters/include/via_converters/: image_converter.hpp  lane_converter.hpp  traffic_sign_converter.hpp
src/via_sdk/via_converters/src/: image_converter.cpp  lane_converter.cpp  traffic_sign_converter.cpp
(+46 files in other folders)
