<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>generic_camera_driver_node</name>
    <version>0.0.1</version>
    <description>Generic camera driver node on ROS 2.</description>

    <maintainer email="makerhanoi@gmail.com">MakerHanoi</maintainer>
    <maintainer email="air.team.2050@gmail.com">AIR</maintainer>
    <author email="vietanh.dev@gmail.com">Viet Anh Nguyen</author>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>via_definitions</depend>
    <depend>via_converters</depend>
    <depend>std_srvs</depend>
    <depend>generic_camera_driver</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ros_testing</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
