<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>via_talker_nodes</name>
    <version>1.0.0</version>
    <description>An example package for VIA SDK.</description>
    <maintainer email="vietanh.dev@gmail.com">Viet Anh Nguyen</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>via_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ros_testing</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
