<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_line_perception_node</name>
  <version>0.0.1</version>
  <description>Simple lane line perception node node for VIA Autonomous.</description>

  <maintainer email="makerhanoi@gmail.com">MakerHanoi</maintainer>
  <maintainer email="air.team.2050@gmail.com">AIR</maintainer>
  <author email="vietanh.dev@gmail.com">Viet Anh Nguyen</author>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>launch_ros</depend>
  <depend>via_common</depend>
  <depend>via_converters</depend>
  <depend>image_transport</depend>
  <depend>lane_line_detector_simple</depend>
  <depend>cv_bridge</depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
